@@ -10,6 +10,7 @@
 
 
 Version 4.2.0 CA
+ - Changed: Fixed delete Shared Note on Edit Options on shnote.php page (windmillway)
  - Changed: shnote.php - Hide Edit link when not logged in, cleaned up JavaScript code to conform with PGV norms. (windmillway)
  - Changed: Tidy up of Shared Note Viewing (windmillway)
  - Changed: Improved Shared/Linked Notes handling - add sh_note/edit sh_note/find link/add link/delete link. Only delete shared note remains. (windmillway)
